--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
-        Alimentos para seus CAchorros e Passaros
+        Alimentos para seus Cachorros e Passaros
     </header>
+    <img src="alimentacao-aves-02 1.png">
+    <img src="images 1.png">
 </body>
 </html>
